--- a/syntaxes/nelson.tmLanguage.in
+++ b/syntaxes/nelson.tmLanguage.in
@@ -31,7 +31,7 @@
 
 		<dict>
 			<key>begin</key>
-			<string>(^[ \t]+)?(?=//)</string>
+			<string>(^[ \t]+)?(?=%)</string>
 			<key>beginCaptures</key>
 			<dict>
 				<key>1</key>
@@ -46,7 +46,7 @@
 			<array>
 				<dict>
 					<key>begin</key>
-					<string>//</string>
+					<string>%</string>
 					<key>beginCaptures</key>
 					<dict>
 						<key>0</key>
